# multimedia_camera_framework

./: 0315.diff  0327.diff  0611.diff  0721_sys.diff  1.diff  1124.patch  2.diff  20250329.diff  20250407.diff  250628_1.diff  250702.diff  250703.diff  250708_blue.diff  250711.diff  250723.diff  250814.diff  250815.diff  250917_blud.diff  251127.diff  3394.diff  9f57ff1f.diff  CODEOWNERS  Mirror.diff  OAT.xml  README.md  README_zh.md  ac35b2f0  b.patch  bundle.json  cfi_blocklist.txt  color.diff  cover.diff  deferredVideo.diff  diff.diff  diff.patch  diff0322.diff  diff_file.diff  diif.patch  e5ad88bc.diff  edof.diff  (+34 more)
common/: BUILD.gn
common/include/task_manager/: task_manager.h  task_registry.h  thread_pool.h
common/include/timer/: steady_clock.h  time_broker.h  timer.h
common/src/task_manager/: task_manager.cpp  task_registry.cpp  thread_pool.cpp  thread_utils.cpp
common/src/timer/: steady_clock.cpp  time_broker.cpp  timer.cpp
common/test/unittest/: BUILD.gn
common/utils/: anonymization.cpp  anonymization.h  blocking_queue.h  camera_dynamic_loader.cpp  camera_dynamic_loader.h  camera_hdi_const.h  camera_log.h  camera_metadata.cpp  camera_metadata.h  camera_server_photo_proxy.cpp  camera_server_photo_proxy.h  camera_simple_timer.cpp  camera_simple_timer.h  camera_surface_buffer_util.h  camera_timer.cpp  camera_timer.h  camera_watermark_info.h  camera_xcollie.cpp  camera_xcollie.h  camera_xml_parser.cpp  media_capability_interface.h  media_capability_proxy.cpp  media_capability_proxy.h  photo_asset_interface.h  photo_asset_proxy.cpp  photo_asset_proxy.h  picture_interface.h  picture_proxy.cpp  picture_proxy.h  sp_holder.h  watch_dog.h  watermark_util.cpp  watermark_util.h
dynamic_libs/: BUILD.gn
dynamic_libs/av_codec/include/: av_codec_adapter.h
dynamic_libs/av_codec/src/: av_codec_adapter.cpp
dynamic_libs/camera_notification/include/: camera_notification.h
dynamic_libs/camera_notification/src/: camera_notification.cpp
dynamic_libs/dfx/include/: dfx_report.h
dynamic_libs/dfx/src/: dfx_report.cpp
dynamic_libs/image_effect/include/: image_effect_adapter.h
dynamic_libs/image_effect/src/: image_effect_adapter.cpp
dynamic_libs/image_framework/include/: image_source_adapter.h  picture_adapter.h
dynamic_libs/image_framework/src/: image_source_adapter.cpp  picture_adapter.cpp
dynamic_libs/media_library/include/: photo_asset_adapter.h
dynamic_libs/media_library/src/: photo_asset_adapter.cpp
dynamic_libs/media_manager/include/: media_manager_adapter.h
dynamic_libs/media_manager/src/: media_manager_adapter.cpp
dynamic_libs/moving_photo/include/: moving_photo_adapter.h  moving_photo_surface_wrapper.h
dynamic_libs/moving_photo/src/: moving_photo_adapter.cpp  moving_photo_surface_wrapper.cpp
dynamic_libs/watermark_exif_metadata/include/: watermark_exif_metadata_adapter.h
dynamic_libs/watermark_exif_metadata/src/: watermark_exif_metadata_adapter.cpp
dynamic_libs/xcomponent_controller/include/: xcomponent_controller_adapter.h
dynamic_libs/xcomponent_controller/src/: xcomponent_controller_adapter.cpp
frameworks/cj/: BUILD.gn
frameworks/ets/ani/: BUILD.gn
frameworks/native/camera/: BUILD.gn
frameworks/native/ndk/: BUILD.gn  camera_input.cpp  camera_manager.cpp  capture_session.cpp  libcamera_ndk.map  metadata_object_ext.cpp  metadata_output.cpp  photo_native.cpp  photo_output.cpp  preview_output.cpp  video_output.cpp
frameworks/taihe/: BUILD.gn  camera_framework.versionscript
frameworks/taihe/idl/: ohos.multimedia.camera.context.taihe  ohos.multimedia.camera.taihe  ohos.multimedia.cameraPicker.context.taihe  ohos.multimedia.cameraPicker.taihe
frameworks/taihe/include/: camera_auto_ref_taihe.h  camera_const_ability_taihe.h  camera_event_emitter_taihe.h  camera_event_listener_taihe.h  camera_manager_taihe.h  camera_security_utils_taihe.h  camera_template_utils_taihe.h  camera_utils_taihe.h  camera_worker_queue_keeper_taihe.h  capture_photo_taihe.h  deferred_photo_proxy_taihe.h  listener_base_taihe.h  photo_ex_taihe.h  photo_taihe.h  quickthumbnail_taihe.h
frameworks/taihe/src/: camera_constructor_taihe.cpp  camera_manager_taihe.cpp  camera_picker_constructor_taihe.cpp  camera_security_utils_taihe.cpp  camera_utils_taihe.cpp  camera_worker_queue_keeper_taihe.cpp  capture_photo_taihe.cpp  deferred_photo_proxy_taihe.cpp  listener_base_taihe.cpp  photo_ex_taihe.cpp  photo_taihe.cpp  quickthumbnail_taihe.cpp
mediastream/: BUILD.gn
mediastream/include/: deferred_process.h  event.h  recorder_engine.h  recorder_engine_adapter.h
mediastream/include/buffer/: audio_buffer_wrapper.h  buffer_wrapper_base.h  meta_buffer_wrapper.h  video_buffer_wrapper.h
mediastream/include/filter/: audio_cache_filter.h  audio_capture_adapter.h  audio_capture_filter.h  audio_capturer_session_adapter.h  audio_deferred_process_adapter.h  audio_encoder_filter.h  audio_fork_filter.h  audio_process_filter.h  cfilter.h  cfilter_factory.h  cinematic_video_cache_filter.h  demuxer_filter.h  image_effect_filter.h  meta_cache_filter.h  metadata_filter.h  moving_photo_audio_encoder_filter.h  moving_photo_muxer_filter.h  moving_photo_video_encoder_filter.h  muxer_filter.h  sink_filter.h  video_cache_filter.h  video_encoder_adapter.h  video_encoder_filter.h
mediastream/include/interface/: i_recorder.h
mediastream/include/pipeline/: pipeline.h
mediastream/include/util/: avbuffer_context.h  engine_context_ext.h  moving_photo_avmuxer.h  moving_photo_engine_context.h  moving_photo_recorder_task.h
mediastream/src/: deferred_process.cpp  recorder_engine.cpp  recorder_engine_adapter.cpp
mediastream/src/buffer/: audio_buffer_wrapper.cpp  meta_buffer_wrapper.cpp  video_buffer_wrapper.cpp
mediastream/src/filter/: audio_cache_filter.cpp  audio_capture_adapter.cpp  cfilter.cpp  (+20 more)
mediastream/test/: BUILD.gn
moviefile/: BUILD.gn
moviefile/include/: movie_file_adapter.h
moviefile/src/: movie_file_adapter.cpp
services/camera_service/: BUILD.gn  camera_cfi_blocklist.txt
services/deferred_processing_service/: BUILD.gn
test/: BUILD.gn
test/test_common/: BUILD.gn
(+2161 files in other folders)
