# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
graphic_surface_path = "//foundation/graphic/graphic_surface"
graphic_2d_path = "//foundation/graphic/graphic_2d"
multimedia_camera_framework_path = "//foundation/multimedia/camera_framework"
multimedia_image_framework_path = "//foundation/multimedia/image_framework"
driver_camera_path = "//drivers/interface/camera"
third_party_path = "//third_party/googletest"
driver_peripheral_path = "//drivers/peripheral/camera"
base_security_path = "//base/security/access_token"
driver_disply_path = "//drivers/peripheral/display"
window_manager_path = "//foundation/window/window_manager"
system_safwk_path = "//utils/system/safwk"
multimedia_media_library_path = "//foundation/multimedia/media_library"
declare_args() {
  camera_framework_feature_camera_rotate_plugin = false
  camera_framework_feature_camera_live_scene_recognition = false
  camera_framework_feature_moving_photo = true
  camera_framework_feature_beauty_notification = true
  camera_framework_feature_movie_file = true
  camera_framework_feature_media_stream = true
  camera_framework_feature_deferred = true
  camera_framework_feature_xcomponent_toast = false
  camera_framework_feature_rotate_param_update = false
  camera_framework_feature_camera_capture_yuv = true
}
use_sensor = false
if (defined(global_parts_info) && defined(global_parts_info.sensors_sensor)) {
  use_sensor = true
}

use_thermal_manager = false
if (defined(global_parts_info) &&
    defined(global_parts_info.powermgr_thermal_manager)) {
  use_thermal_manager = true
}

use_battery_manager = false
if (defined(global_parts_info) &&
    defined(global_parts_info.powermgr_battery_manager)) {
  use_battery_manager = true
}

use_power_manager = false
if (defined(global_parts_info) &&
    defined(global_parts_info.powermgr_power_manager)) {
  use_power_manager = true
}

use_image_effect = false
if (defined(global_parts_info) &&
    defined(global_parts_info.multimedia_image_effect)) {
  use_image_effect = true
}

use_memmgr_override = false
if (defined(global_parts_info) &&
    defined(global_parts_info.resourceschedule_memmgr_override)) {
  use_memmgr_override = true
}

gen_camera_picker = true
hicollie_enable = true
declare_args() {
  fwk_no_hidden = false
}